--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,10 @@
-<p class="title">Tvarkaraštis Neue API</p>
+<p>Tvarkaraštis Neue API</p>
+<div id="map" style='display: inline-block; width: 100%; height: 700px;'></div>
+
+<script>
+    setTimeout(function() {
+      markers = handler.addMarkers(<%=raw @hash.to_json %>);
+      handler.bounds.extendWith(markers);
+      handler.fitMapToBounds();
+    }, 1000);
+</script>
