--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,13 +10,50 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
- *= require_tree .
- *= require_self
  */
 
-body {
-	background-color: #2196F3;
-	color: rgba(255, 255, 255, 0.85);
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-	font-weight: 300;
+@import "bootstrap";
+
+.navbar {
+  background-color: #2196F3 !important;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
+}
+
+.navbar-light {
+  color: #fff !important;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  background: #eee;
+  display: block;
+}
+
+html, body {
+  height: 100%;
+}
+
+.fill { 
+  min-height: 100%;
+  height: 100%;
+}
+
+.container-fluid {
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.side-drawer {
+  background: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 56px;
+  left: 0px;
+  overflow-y: scroll;
+  height: 100%;
+  width: 400px;
 }
