--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,18 +3,76 @@
   <head>
     <title>TvarkarastisApi</title>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
 
     <script src="//maps.google.com/maps/api/js?key=AIzaSyBXf-e8iN4_Bu8EXF3bXMjD5EvgPN9dXPc"></script>
     <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
-    <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
+    <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js'></script> <!-- only if you need custom infoboxes -->
 
   </head>
 
   <body onload="mapInit();">
-  	<div class="wat">
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
+      <a class="navbar-brand w-t" href="/">Lietuvos Mokyklų Paieška</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Map</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/api/v1">API Docs</a>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav navbar-right">
+          <% if (user_signed_in? & admin_user?) %>
+            <li class="nav-item">
+              <%= link_to('Admin', admin_index_path) %>  
+            </li>
+          <% end %>
+        </ul>
+        <ul class="navbar-nav navbar-right">
+          <% if !user_signed_in? %>
+            <li class="nav-item">
+              <%= link_to 'Login', new_user_session_path, :class=>"nav-link" %>  
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Sign Up', new_user_registration_path, :class=>"nav-link" %>  
+            </li>
+          <% else %>
+            <li class="nav-item">
+              <%= link_to 'Edit', edit_user_registration_path, :class=>"nav-link" %>  
+            </li>        
+            <li class="nav-item">
+              <%= link_to 'Logout', destroy_user_session_path, method: :delete, :class=>"nav-link" %>  
+            </li>        
+          <% end %>
+        </ul>
+
+        <form class="form-inline my-2 my-lg-0" action="/search">
+          <input class="form-control mr-sm-2" name="search_q" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
+
+    <% if notice %>
+      <p class="alert alert-info"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+      <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+
+  	<div class="container-fluid fill">
+      <%= yield %>
     </div>
+
   </body>
+
 </html>
